--- a/app/src/main/res/layout/recipe_list_fragment.xml
+++ b/app/src/main/res/layout/recipe_list_fragment.xml
@@ -5,19 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLightBackground"
-    tools:context=".RecipeListActivity">
+    tools:context=".ui.activity.FoodActivity">
+
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="@dimen/back_icon"
+        android:layout_height="@dimen/back_icon"
+        android:src="@drawable/back"
+        android:padding="@dimen/inner_margin"
+        android:layout_marginTop="@dimen/inner_margin"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/out_margin"
+        android:layout_marginStart="@dimen/inner_margin"
         android:layout_marginTop="@dimen/out_margin"
+        android:text="@string/recipe_header"
         android:fontFamily="sans-serif-condensed-medium"
         android:textColor="@color/colorCoffeeBrown"
         android:textSize="@dimen/header"
         android:paddingBottom="@dimen/out_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/back"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
