--- a/app/src/main/res/layout/recipe_list_fragment.xml
+++ b/app/src/main/res/layout/recipe_list_fragment.xml
@@ -1,59 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorLightBackground"
-    tools:context=".ui.activity.FoodActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/back"
-        android:layout_width="@dimen/back_icon"
-        android:layout_height="@dimen/back_icon"
-        android:src="@drawable/back"
-        android:padding="@dimen/inner_margin"
-        android:layout_marginTop="@dimen/inner_margin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/inner_margin"
-        android:layout_marginTop="@dimen/out_margin"
-        android:text="@string/recipe_header"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:textColor="@color/colorCoffeeBrown"
-        android:textSize="@dimen/header"
-        android:paddingBottom="@dimen/out_margin"
-        app:layout_constraintLeft_toRightOf="@+id/back"
-        app:layout_constraintTop_toTopOf="parent" />
+        <import type="android.view.View" />
 
-    <TextView
-        android:visibility="gone"
+        <variable
+            name="viewmodel"
+            type="com.example.recipeapp.viewmodel.FoodRecipeListViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/description"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="@dimen/text"
-        android:layout_marginLeft="@dimen/out_margin"
-        android:layout_marginRight="@dimen/out_margin"
-        android:paddingBottom="@dimen/out_margin"
-        app:layout_constraintLeft_toLeftOf="@id/header"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        />
+        android:layout_height="match_parent"
+        android:background="@color/colorLightBackground"
+        tools:context=".ui.activity.FoodActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/preview_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description">
-    </androidx.recyclerview.widget.RecyclerView>
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="@dimen/back_icon"
+            android:layout_height="@dimen/back_icon"
+            android:layout_marginTop="@dimen/inner_margin"
+            android:padding="@dimen/inner_margin"
+            android:src="@drawable/back"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/inner_margin"
+            android:layout_marginTop="@dimen/out_margin"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:paddingBottom="@dimen/out_margin"
+            android:text="@string/recipe_header"
+            android:textColor="@color/colorCoffeeBrown"
+            android:textSize="@dimen/header"
+            app:layout_constraintLeft_toRightOf="@+id/back"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/out_margin"
+            android:layout_marginRight="@dimen/out_margin"
+            android:fontFamily="sans-serif-condensed"
+            android:paddingBottom="@dimen/out_margin"
+            android:textSize="@dimen/text"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="@id/header"
+            app:layout_constraintTop_toBottomOf="@id/header" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/image_size"
+            android:visibility="@{safeUnbox(viewmodel.dataLoading) ? View.GONE : View.VISIBLE}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="@{safeUnbox(viewmodel.dataLoading) ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/empty_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/error_text"
+            android:textSize="18sp"
+            android:visibility="@{safeUnbox(viewmodel.empty) ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/progressBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
