--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="out_margin">25dp</dimen>
+    <dimen name="middle_out_margin">20dp</dimen>
     <dimen name="image_size">100dp</dimen>
+    <dimen name="small_image_size">80dp</dimen>
     <dimen name="field">150dp</dimen>
     <dimen name="preview_size">200dp</dimen>
     <dimen name="inner_margin">15dp</dimen>
