--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,17 +18,6 @@
             android:paddingBottom="@dimen/out_margin">
 
             <ImageView
-                android:id="@+id/back"
-                android:layout_width="@dimen/back_icon"
-                android:layout_height="@dimen/back_icon"
-                android:layout_marginTop="@dimen/inner_margin"
-                android:padding="@dimen/inner_margin"
-                android:src="@drawable/back"
-                android:background="@color/colorLightBackground"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/detail_image"
@@ -48,7 +37,80 @@
                 app:layout_constraintStart_toStartOf="@id/image" />
 
             <TextView
-                android:id="@+id/textview"
+                android:id="@+id/textview1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/out_margin"
+                android:layout_marginTop="@dimen/inner_margin"
+                android:fontFamily="sans-serif-condensed"
+                android:text="@string/ingredients"
+                android:textColor="@color/colorCoffeeDark"
+                android:textSize="@dimen/preview_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <TextView
+                android:id="@+id/ingredients"
+                android:layout_width="@dimen/ingredients"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/inner_margin"
+                android:background="@drawable/round_layout_light"
+                android:fontFamily="sans-serif-condensed"
+                android:padding="@dimen/inner_margin"
+                android:textColor="@color/colorCoffeeDark"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textview1" />
+
+            <TextView
+                android:id="@+id/textview3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/inner_margin"
+                android:fontFamily="sans-serif-condensed"
+                android:text="@string/category"
+                android:textColor="@color/colorCoffeeDark"
+                android:textSize="@dimen/preview_text"
+                app:layout_constraintStart_toStartOf="@id/category"
+                app:layout_constraintTop_toBottomOf="@id/title" />
+
+            <TextView
+                android:id="@+id/category"
+                android:layout_width="@dimen/recipe_data"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/inner_margin"
+                android:background="@drawable/round_layout_light"
+                android:fontFamily="sans-serif-condensed"
+                android:padding="@dimen/inner_margin"
+                android:textColor="@color/colorCoffeeDark"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textview1" />
+
+            <TextView
+                android:id="@+id/textview4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/inner_margin"
+                android:fontFamily="sans-serif-condensed"
+                android:text="@string/country"
+                android:textColor="@color/colorCoffeeDark"
+                android:textSize="@dimen/preview_text"
+                app:layout_constraintStart_toStartOf="@id/country"
+                app:layout_constraintTop_toBottomOf="@id/category" />
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="@dimen/recipe_data"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/inner_margin"
+                android:background="@drawable/round_layout_light"
+                android:fontFamily="sans-serif-condensed"
+                android:padding="@dimen/inner_margin"
+                android:textColor="@color/colorCoffeeDark"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textview4" />
+
+            <TextView
+                android:id="@+id/textview2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/out_margin"
@@ -58,18 +120,30 @@
                 android:textColor="@color/colorCoffeeDark"
                 android:textSize="@dimen/preview_text"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title" />
+                app:layout_constraintTop_toBottomOf="@id/ingredients" />
 
             <TextView
                 android:id="@+id/instructions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/inner_margin"
-                android:background="@color/colorLightBackground"
+                android:background="@drawable/round_layout_light"
                 android:fontFamily="sans-serif-condensed"
                 android:padding="@dimen/inner_margin"
                 android:textColor="@color/colorCoffeeDark"
-                app:layout_constraintTop_toBottomOf="@id/textview" />
+                app:layout_constraintTop_toBottomOf="@id/textview2" />
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="@dimen/back_icon"
+                android:layout_height="@dimen/back_icon"
+                android:layout_marginTop="@dimen/inner_margin"
+                android:background="@android:color/transparent"
+                android:padding="@dimen/inner_margin"
+                android:src="@drawable/back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
