--- a/app/src/main/res/drawable/main_menu_item.xml
+++ b/app/src/main/res/drawable/main_menu_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorRoseNude" />
+    <solid android:color="@color/colorLightBackground" />
     <stroke
         android:width="1dip"
         android:color="@color/colorCoffeeDark" />
