--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorLightBackground"
     android:orientation="vertical"
-    android:paddingTop="50dp"
+    android:paddingTop="@dimen/icon_margin_top"
     tools:context=".ui.activity.FoodActivity">
 
     <LinearLayout
