--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,42 +48,44 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/profile_photo"
+        android:layout_height="@dimen/profile_photo"
+        android:layout_margin="@dimen/photo_margin"
+        android:background="@drawable/profile_photo_round"
+        android:padding="@dimen/photo_padding"
+        android:src="@drawable/app_icon"
+        android:layout_gravity="center_horizontal" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="@dimen/profile_photo"
-            android:layout_height="@dimen/profile_photo"
-            android:layout_margin="@dimen/photo_margin"
-            android:background="@drawable/profile_photo_round"
-            android:padding="@dimen/photo_padding"
-            android:src="@drawable/app_icon"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
+            android:fontFamily="sans-serif-condensed"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/photo_margin"
             android:text="username"
             android:textColor="@color/colorCoffeeDark"
-            android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
             android:layout_margin="@dimen/photo_margin"
             android:text="email"
             android:textColor="@color/colorCoffeeDark"
             android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/username" />
 
         <TextView
@@ -92,6 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/photo_margin"
             android:background="@drawable/layout_border"
+            android:fontFamily="sans-serif-condensed"
             android:paddingStart="10dp"
             android:paddingTop="5dp"
             android:paddingEnd="10dp"
@@ -99,33 +102,17 @@
             android:text="Change profile photo"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recent:"
-        android:layout_margin="10dp"
-        android:textSize="20dp"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        android:textColor="@color/colorCoffeeBrown"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/change_button" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/colorCoffeeDark" />
