--- a/app/src/main/res/layout/recent_bar_item.xml
+++ b/app/src/main/res/layout/recent_bar_item.xml
@@ -2,13 +2,13 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/myCardView"
+        android:layout_margin="5dp"
         android:layout_width="80dp"
-        android:layout_marginStart="10dp"
         android:layout_height="80dp"
         app:cardCornerRadius="50dp">
 
