--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,14 +27,14 @@
 
             <TextView
                 android:id="@+id/title"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:padding="@dimen/inner_margin"
+                android:shadowColor="@android:color/black"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="2"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/header"
                 app:layout_constraintBottom_toBottomOf="@+id/image"
@@ -46,7 +46,7 @@
                 android:layout_height="50dp"
                 android:src="@drawable/save_icon"
                 app:layout_constraintBottom_toBottomOf="@+id/image"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/textview1"
@@ -157,20 +157,48 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/textview5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/out_margin"
+                android:layout_marginTop="@dimen/inner_margin"
+                android:fontFamily="sans-serif-condensed"
+                android:text="YouTube:"
+                android:textColor="@color/colorCoffeeDark"
+                android:textSize="@dimen/preview_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/instructions" />
+
+            <RelativeLayout
+                android:id="@+id/videolayout"
+                android:layout_width="match_parent"
+                android:layout_height="480dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview5">
+
+            <WebView
+                android:id="@+id/video"
+                android:layout_width="match_parent"
+                android:layout_height="480dp"
+                android:layout_margin="15dp" />
+
+            </RelativeLayout>
+
+            <TextView
                 android:id="@+id/textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recent:"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="50dp"
-                android:textSize="20dp"
                 android:shadowColor="@android:color/black"
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="1"
+                android:text="Recent:"
                 android:textColor="@color/colorCoffeeBrown"
+                android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/instructions"/>
+                app:layout_constraintTop_toBottomOf="@+id/videolayout" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
